# toshokan

./: .gitignore  CMakeLists.txt  Makefile  README  Toshokan.pro  bookshow.cpp  bookshow.h  bookshow.ui  db_sketch.rus.txt  listview.h  maddwidget.cpp  maddwidget.h  maddwidget.ui  main.cpp  saddwidget.cpp  saddwidget.h  saddwidget.ui  toshadd.cpp  toshadd.h  toshores.qrc  toshview.cpp  toshview.h  toshview.ui
